<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">esp1415</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Impostazioni</string>
    <string name="thumbnail_description">Contorno della thumbnail</string>
    <string name="play_description">Pulsante play</string>
    <string name="stop_description">Pulsante stop</string>
    <string name="cross">Stato invio notifica</string>
    <string name="title_session_list_activity">ESP1415</string>
    <string name="title_session_details_activity">DettaglioSessione</string>
    <string name="title_past_session_details_activity">DettaglioSessionePassata</string>
    <string name="title_fall_details_activity">DettaglioCaduta</string>
    <string name="title_contactlist_activity">ContactList</string>
    <string name="title_settings_activity">Opzioni</string>
    <string name="time">"Ora: "</string>
    <string name="date">"Data: "</string>
    <string name="latitude">"Latitudine: "</string>
    <string name="longitude">"Longitudine: "</string>
    <string name="notification">"Notifica: "</string>
    <string name="falls">"CADUTE"</string>
    <string name="duration">durata</string>
    <string name="timestamp">timestamp</string>
    <string name="fall_number">n</string>
    <string name="new_session">Nuova sessione</string>
    <string name="menu_rename">Rinomina</string>
    <string name="menu_delete">Elimina</string>
    <string name="action_rename">Rinomina</string>
    <string name="rename_description">Digita il nuovo nome per la sessione</string>
    <string name="rename">Rinomina</string>
    <string name="cancel">Annulla</string>
    <string name="x_label">X: </string>
    <string name="y_label">Y: </string>
    <string name="z_label">Z: </string>
    <string name="active_session_error">C\'è già una sessione attiva</string>
    <string name="session_removed">\u0020eliminata</string>
    <string name="date_and_time">Data e ora inizio:\u0020</string>
    <string name="session_duration">Durata:\u0020</string>
    <string name="fall">caduta</string>
    <string name="falls_lower_case">cadute</string>
    <string name="done">Fatto</string>
    <string name="sampling_fastest">Molto alta</string>
    <string name="sampling_game">Alta</string>
    <string name="sampling_normal">Normale</string>
    <string name="sampling_ui">Bassa</string>
	<string name="sampling">Frequenza di campionamento</string>
	<string name="save">Salva modifiche</string>
	<string name="contacts">Scegli contatti</string>
	<string name="default_alarm">8:00</string>
	<string name="email">Indirizzo e-mail</string>
	<string name="memo">Promemoria sessione</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="default_duration">8</string>
	<string name="hours">ore</string>
	<string name="max_duration">Massima durata sessione</string>
	<string name="email_sender">E-mail per invio notifiche</string>
	<string name="password">Password</string>
	<string name="contact_list">Lista contatti per invio notifiche</string>
	<string name="gmail">\@gmail.com</string>
	<string name="enable_alarm">Attiva sveglia</string>
	<string name="enable_notification">Attiva notifica</string>
	<string name="session_name">Nome sessione</string>
	<string name="x_value">xValue</string>
	<string name="y_value">yValue</string>
	<string name="z_value">zValue</string>
	<string name="session_reminder">Ricordati di creare una nuova sessione.</string>
	<string name="contacts_not_found">File contatti scelti non trovato</string>
	<string name="contacts_writing_error">Errore scrittura file contatti scelti</string>
	<string name="not_applicable">N/A</string>
	<string name="sent">inviata</string>
	<string name="not_sent">non inviata</string>
	<string name="hour">ora</string>
	<string name="very_high">Molto alta</string>
	<string name="high">Alta</string>
	<string name="normal">Normale</string>
	<string name="low">Bassa</string>
	<string name="contacts_reading_error">Errore lettura file contatti scelti</string>
	<string name="thumbnail_not_found">Thumbnail non trovata</string>
	<string name="thumbnail_writing_error">Errore scrittura della thumbnail</string>
	<string name="thumbnail_loading_error">Errore caricamento della thumbnail</string>
	<string name="spazio_insufficiente">Spazio disponibile insufficiente, liberare spazio.</string>
	<string name="sessionWithSpace">"Sessione "</string>
	<string name="active_session">Sessione attiva</string>
	<string name="insert_a_name">Inserisci un nome per la sessione</string>
	<string name="fall_toast">"caduta con accelerazione "</string>
	
</resources>